gcc/testsuite/g++.dg/cpp0x/constexpr-object1.C
@@ -7,7 +7,7 @@
 
 // p 1 constexpr specifier
 // objects, static const data
-struct A1 { };	   // { dg-message "no user-provided default constructor" }
+struct A1 { int i; };	   // { dg-message "no user-provided default constructor" }
 
 constexpr int i1 = 1024;
 constexpr A1 a1 = A1();
